--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
   line-height: 1.6;
+  background:linear-gradient(135deg, darkblue , yellow) ;
 }
 
 ul {
@@ -23,6 +24,9 @@ header {
   background: #f4f4f4;
   padding: 1rem;
   text-align: center;
+  font-weight: 900;
+  font-family: sans-serif;
+  background:linear-gradient(45deg, darkblue , yellow) ;
 }
 
 .container {
@@ -39,6 +43,14 @@ header {
 
 #my-form label {
   display: block;
+}
+
+#category{
+  width: 100%;
+  padding: 8px;
+  margin-bottom: 10px;
+  border-radius: 5px;
+  border: 1px solid #ccc;
 }
 
 #my-form input[type='text'] {
@@ -75,3 +87,10 @@ header {
   padding: 5px;
   margin: 5px;
 }
+
+.delete .edit{
+  border-radius: none;
+  margin: 3px;
+  padding:5px;
+}
+
